[project]
name = "comfyui-string-converter"
description = "Nodes: Convert String To Int, Convert String To Float"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/glowcone/comfyui-string-converter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-string-converter"
Icon = ""
